# AI_Wardrobe_Tg_Bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_Wardrobe_UI_UX_Design_Spec_v0_2_2.md  CHANGELOG.md  Dockerfile  README.md  alembic.ini  design_tokens_v0_2_2.json  docker-compose.yml  mobile_visual_prototype.html  pyproject.toml  tz_ai_digital_wardrobe_v0_2_2.md
apps/api/aiwardrobe_api/: dependencies.py  main.py
apps/api/aiwardrobe_api/routers/: ai.py  auth.py  billing.py  designer.py  health.py  items.py  looks.py  marketplace.py  outfits.py  privacy.py  style.py  uploads.py  wishlist.py
apps/bot/aiwardrobe_bot/: __init__.py  keyboards.py  main.py
apps/miniapp/: index.html  package-lock.json  package.json
apps/miniapp/src/: App.tsx  api.ts  components.tsx  data.ts  styles.css  telegram.ts  types.ts
apps/worker/aiwardrobe_worker/: __init__.py  celery_app.py  tasks.py
docs/: adr.md  api.md  architecture.md  deploy.md  tech_debt.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: smoke-local.ps1
tests/: test_api_contract.py  test_billing.py  test_bot_contract.py  test_deployment_contract.py  test_frontend_contract.py  test_security.py
